--- a/aspnet-get-started/Views/Home/Index.cshtml
+++ b/aspnet-get-started/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 }
 
 <div class="jumbotron">
-    <h1>This is developed byTim,Rashmi,Joo,Chad and Andrew </h1>
-    <p class="lead">Welcome To Azure Advance Administration Training123 </p>
+    <h1>This is developed byTim,Rashmi,Joo,Chad and Andrew123 </h1>
+    <p class="lead">Welcome To Azure Advance Administration Training </p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
